tests/errors/lexing/test06.cmp
program main 
begin
   var x := .55   (* illegal float literal *)
end 